--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -9,3 +9,13 @@ h2 {
   font-size: 25px;
   font-weight: 300;
 }
+
+// HOME
+.wrapMainHome {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  img {
+    width: 100%;
+  }
+}
