--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -12,12 +12,11 @@ h2 {
 
 // HOME
 .wrapScreenHome {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
   background-color: #000000;
   .wrapMainHome {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     img {
       width: 100%;
