--- a/src/Styles/Evaluation.scss
+++ b/src/Styles/Evaluation.scss
@@ -145,6 +145,10 @@
     background-color: rgba(255,255,255,0.9);
     padding: 20px 20px 40px 20px;
     box-sizing: border-box;
+    @include xs {
+      width: 100%;
+      margin-top: 20px;
+    }
     &:nth-child(1) {
       width: 100%;
     }
