Add themes home for levels dancers

--- a/src/Styles/Global.scss
+++ b/src/Styles/Global.scss
@@ -1,6 +1,7 @@
 @import 'Colors';
 @import 'MediaQueries';
 @import 'Functions';
+@import 'Themes';
 @import 'Users';
 @import 'Tariff';
 @import 'Evaluation';
