--- a/src/Styles/Dancer.scss
+++ b/src/Styles/Dancer.scss
@@ -67,7 +67,7 @@
         width: 100%;
         position: fixed;
         box-sizing: border-box;
-        z-index: 3;
+        z-index: 5;
         h1 {
             font-size: toRem(18);
             font-weight: normal;
@@ -76,27 +76,44 @@
         &-wrap {
             display: flex;
             justify-content: flex-end;
+            align-items: center;
             padding: toRem(10) 0;
             background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,94,1) 35%, rgba(175,0,255,1) 100%);
+            &-title {
+                font-size: toRem(13);
+                color: white;
+            }
             &-item {
                 display: flex;
-                width: toRem(60);
+                width: toRem(50);
                 flex-wrap: wrap;
                 justify-content: center;
                 line-height: 1;
                 text-transform: uppercase;
-                font-size: toRem(12);
+                font-size: toRem(10);
                 color: $white;
-                border-right: toRem(1) solid $white;
+                position: relative;
+                align-items: center;
+                &::after {
+                    display: block;
+                    content: '';
+                    width: 1px;
+                    background-color: rgba(121,9,94,0.3);
+                    height: 100%;
+                    position: absolute;
+                    right: 0;
+                }
                 &:last-child {
-                    border: none;
+                    &::after {
+                        display: none;
+                    }
                 }
                 span {
                     display: block;
                     width: 100%;
                     text-align: center;
                     font-weight: bold;
-                    font-size: toRem(24);
+                    font-size: toRem(20);
                 }
             }
         }
