--- a/src/Styles/Festival.scss
+++ b/src/Styles/Festival.scss
@@ -27,13 +27,32 @@
         &.theme_comprension {
             display: grid;
             width: auto;
-            grid-template-columns: repeat(4, auto);
+            grid-template-columns: repeat(5, auto);
             //grid-auto-flow: column;
             grid-gap: 20px;
             align-self: flex-start;
+            position: relative;
 
             a {
                 color: black;
+            }
+
+            .classified {
+                display: flex;
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                justify-content: center;
+                align-items: center;
+
+                .link--classified {
+                    position: absolute;
+                    background-color: $color3;
+                    color: white;
+                    padding: 10px 20px;
+                    font-size: toRem(30);
+                    border-radius: 5px;
+                }
             }
 
             .festival__dancers__dancer {
@@ -86,9 +105,16 @@
 
             &.calificated {
                 .festival__dancers__dancer__image {
-                    filter: blur(2px);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    //filter: blur(2px);
 
                     &::before {
+                        display: block;
+                    }
+
+                    &::after {
                         display: block;
                     }
                 }
@@ -110,8 +136,21 @@
                     width: 100%;
                     height: 100%;
                     position: absolute;
-                    background-color: rgba($color4, 0.6);
+                    background-color: rgba(black, 0.8);
                     display: none;
+                }
+
+                &::after {
+                    content: '';
+                    display: none;
+                    width: 32px;
+                    height: 32px;
+                    background-image: url('../Images/check.png');
+                    background-repeat: no-repeat;
+                    background-position: center center;
+                    background-size: contain;
+                    z-index: 2;
+                    position: relative;
                 }
 
                 img {
@@ -147,6 +186,47 @@
         button {
             width: toRem(200);
         }
+    }
+
+    &__classified {
+        display: flex;
+        width: 100%;
+        max-width: 900px;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        justify-content: center;
+
+        h1 {
+            width: 100%;
+            color: black;
+            text-align: center;
+            margin: 30px 0;
+        }
+
+        &__dancers {
+            display: grid;
+            width: auto;
+            grid-template-columns: repeat(3, auto);
+            //grid-auto-flow: column;
+            grid-gap: 20px;
+            align-self: flex-start;
+            position: relative;
+
+            .dancer--image {
+                width: 200px;
+                height: 200px;
+                background-size: cover;
+                background-position: center center;
+                border-radius: 50%;
+            }
+
+            .dancer--name {
+                font-size: toRem(30);
+                text-align: center;
+            }
+        }
+
+        //justify-content: flex-end;
     }
 
     &__calification {
