--- a/src/Styles/Festival.scss
+++ b/src/Styles/Festival.scss
@@ -44,6 +44,7 @@
                 height: 100%;
                 justify-content: center;
                 align-items: center;
+                z-index: 3;
 
                 .link--classified {
                     position: absolute;
