--- a/src/Styles/Festival.scss
+++ b/src/Styles/Festival.scss
@@ -128,7 +128,7 @@
                 border-radius: 50%;
                 overflow: hidden;
                 background-repeat: no-repeat;
-                background-size: 100% auto;
+                background-size: cover;
                 background-position: center center;
                 position: relative;
 
